# store-backend

./: Cargo.toml  database.sqlite
src/: main.rs
src/api/: product.rs  user.rs
src/middleware/: authorization_token.rs  mod.rs
src/models/: product.rs  user.rs
src/repository/: db.rs  mod.rs  products.rs  user.rs  users.rs
src/utils/: jwt.rs  mod.rs
